# mnxvalidate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmake
.github/workflows/: build.yml
cmake/: Dependencies.cmake  GenerateLicenseXxd.cmake  GenerateMnxSchemaXxd.cmake
notes/: validation_ideas.md
schema/: schema-info.txt
scripts/: macprod.sh  winprod.bat
src/: about.cpp  main.cpp  mnxvalidate.cpp  mnxvalidate.h
src/export/: mnx.cpp  mnx.h
src/utils/: stringutils.h  ziputils.cpp  ziputils.h
tests/: CMakeLists.txt  mnxvalidatetests.cpp  test_examples.cpp  test_global.cpp  test_layouts.cpp  test_logging.cpp  test_parts.cpp  test_schema.cpp  test_scores.cpp  test_utils.h
tests/data/: init.txt
tests/data/inputs/: generic_nonascii_其れ.json  generic_schema.json  valid.mnx
tests/data/inputs/errors/: duplicate_layouts.json  duplicate_measures.json  duplicate_parts.json  layout_invalid_staffnum.json  layout_with_bad_part.json  measures_mismatch.json  mmrest_edgecase.json  score_bad_layout.json  score_layoutchange_bad_layout.json  score_mmrest_bad_span.json  score_mmrest_bad_start.json  score_page_bad_layout.json  score_system_bad_layout.json  score_system_bad_measure.json  score_system_bad_start.json  score_system_bad_start2.json
tests/data/inputs/examples/: articulations.json  beam_grace_notes.json  beam_hooks.json  beam_over_barlines.json  beam_secondaries.json  beams.json  clef_changes.json  dotted_notes.json  grace_notes.json  grace_notes_beamed.json  grand_staff.json  hello_world.json  jumps_ds.json  jumps_ds_al_fine.json  key_signatures.json  lyric_line_metadata.json  lyrics_basic.json  lyrics_multiline.json  multimeasure_rest.json  multiple_voices.json  orchestral_layout.json  organ_layout.json  ottavas.json  parts.json  repeate_endings_adv.json  repeats.json  repeats_4x.json  repeats_endings_simple.json  repeats_impstart.json  rest_positions.json  slurs.json  slurs_incomplete.json  slurs_targeting_notes.json  slurs_with_chords.json  styling_basic.json  styling_via_class.json  system_layouts.json  tempo_markings.json  three_note_chord_half_rest.json  ties.json  (+4 more)
